Implement the clear and grid button

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
             <input type="range" id="range" min="2" max="100" value="16" class="slider">
         </div>
         <hr>
-        <div class="clear-icon">
-            Clear
+        <div>
+            <img class="clear-icon menu-button" src="./img/clear.png" title="Clear the grid" alt="Cross icon">
         </div>
-        <div class="show-grid-icon">
-            Grid
+        <div>
+            <img class="grid-icon menu-button" src="./img/grid.png" title="Toggle grid" alt="Grid icon">
         </div>
         <hr>
-        <div class="colour-wheel">
-            <input type="color" value="#ff0000">
+        <div>
+            <input type="color" class="color-wheel" value="#000000">
         </div>
         <div class="draw-mode">
-            Draw
+            <img class="menu-button" src="./img/draw.png" title="Draw mode" alt="Draw icon">
         </div>
         <div class="rainbow-mode">
-            Rainbow
+            <img class="menu-button" src="./img/rainbow.png" title="Rainbow mode" alt="Rainbow icon">
         </div>
         <div class="gray-scale">
-            Gray
+            <img class="menu-button" src="./img/grayscale.png" title="Grayscale mode" alt="Grayscale icon">
         </div>
         <div class="erase-icon">
-            Erase
+            <img class="menu-button" src="./img/erase.png" title="Eraser mode" alt="Eraser icon">
         </div>
 
     </div>
