Add rainbow mode and eraser functionality

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         </div>
         <hr>
         <div>
-            <input type="color" class="color-wheel" value="#000000">
+            <input type="color" class="color-wheel" title="Choose your custom color" value="#000000">
         </div>
-        <div class="draw-mode">
-            <img class="menu-button" src="./img/draw.png" title="Draw mode" alt="Draw icon">
+        <div>
+            <img class="menu-button draw-mode" src="./img/draw.png" title="Draw mode" alt="Draw icon">
         </div>
-        <div class="rainbow-mode">
-            <img class="menu-button" src="./img/rainbow.png" title="Rainbow mode" alt="Rainbow icon">
+        <div>
+            <img class="menu-button rainbow-mode" src="./img/rainbow.png" title="Rainbow mode" alt="Rainbow icon">
         </div>
-        <div class="gray-scale">
-            <img class="menu-button" src="./img/grayscale.png" title="Grayscale mode" alt="Grayscale icon">
+        <div>
+            <img class="menu-button grayscale-mode" src="./img/grayscale.png" title="Grayscale mode" alt="Grayscale icon">
         </div>
-        <div class="erase-icon">
-            <img class="menu-button" src="./img/erase.png" title="Eraser mode" alt="Eraser icon">
+        <div>
+            <img class="menu-button erase-icon" src="./img/erase.png" title="Eraser mode" alt="Eraser icon">
         </div>
 
     </div>
