Change the style and colouring of the webpage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="etch.js" defer></script>
     <title>Etch-a-Sketch</title>
@@ -15,7 +15,7 @@
 
     <div class="header">
         <div class="title">Etch-a-Sketch</div>
-        <div class="mode">Button</div>
+        <div class="mode"></div>
     </div>
 
     <div class="buttons">
@@ -41,7 +41,7 @@
             <img class="menu-button rainbow-mode" src="./img/rainbow.png" title="Rainbow mode" alt="Rainbow icon">
         </div>
         <div>
-            <img class="menu-button grayscale-mode" src="./img/grayscale.png" title="Grayscale mode" alt="Grayscale icon">
+            <img class="menu-button opacity-mode" src="./img/opacity.png" title="Opacity mode" alt="Opacity icon">
         </div>
         <div>
             <img class="menu-button erase-icon" src="./img/erase.png" title="Eraser mode" alt="Eraser icon">
@@ -54,7 +54,7 @@
     </div>
 
     <div class="footer">
-        <div>2025 - <a href="https://github.com/Anton-Ngan" target="_blank" rel="noopener noreferrer">Anton</a></div>
+        <div><a href="https://github.com/Anton-Ngan" target="_blank" rel="noopener noreferrer">Developed by EGO</a></div>
     </div>
 
 </body>
