Change the behaviour of the opacity to now only make the text content opaque, not the whole cell

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
+    <link rel="icon" href="./img/favicon.svg">
     <link rel="stylesheet" href="styles.css">
     <script src="etch.js" defer></script>
     <title>Etch-a-Sketch</title>
@@ -25,26 +26,26 @@
         </div>
         <hr>
         <div>
-            <img class="clear-icon menu-button" src="./img/clear.png" title="Clear the grid" alt="Cross icon">
+            <img class="clear-icon menu-button" src="./img/bin.svg" title="Clear the grid" alt="Bin icon">
         </div>
         <div>
-            <img class="grid-icon menu-button" src="./img/grid.png" title="Toggle grid" alt="Grid icon">
+            <img class="grid-icon menu-button" src="./img/grid.svg" title="Toggle grid line" alt="Grid line icon">
         </div>
         <hr>
         <div>
             <input type="color" class="color-wheel" title="Choose your custom color" value="#000000">
         </div>
         <div>
-            <img class="menu-button draw-mode" src="./img/draw.png" title="Draw mode" alt="Draw icon">
+            <img class="menu-button mode draw-mode" src="./img/draw.svg" title="Toggle on default drawing mode" alt="Draw icon">
         </div>
         <div>
-            <img class="menu-button rainbow-mode" src="./img/rainbow.png" title="Rainbow mode" alt="Rainbow icon">
+            <img class="menu-button mode rainbow-mode" src="./img/rainbow.svg" title="Toggle on rainbow mode" alt="Rainbow icon">
         </div>
         <div>
-            <img class="menu-button opacity-mode" src="./img/opacity.png" title="Opacity mode" alt="Opacity icon">
+            <img class="menu-button mode opacity-mode" src="./img/opacity.svg" title="Toggle on opacity mode" alt="Opacity icon">
         </div>
         <div>
-            <img class="menu-button erase-icon" src="./img/erase.png" title="Eraser mode" alt="Eraser icon">
+            <img class="menu-button mode erase-icon" src="./img/eraser.svg" title="Toggle on eraser mode" alt="Eraser icon">
         </div>
 
     </div>
@@ -54,7 +55,7 @@
     </div>
 
     <div class="footer">
-        <div><a href="https://github.com/Anton-Ngan" target="_blank" rel="noopener noreferrer">Developed by EGO</a></div>
+        <div><a class="footer-text" href="https://github.com/Anton-Ngan" target="_blank" rel="noopener noreferrer">Developed by EGO</a></div>
     </div>
 
 </body>
